# a-maze-ing

./: Makefile  README.md  a_maze_ing.py  amazing_anil.py  beautify.py  config.txt  init_config.txt  launcher.py  main.py  maze.txt  pyproject.toml  requirements.txt  solver.py  symbol.py
maze_gen/: __init__.py  generator.py  maze_generator.py  ourtypes.py
ui/: __init__.py  beautify.py  cinematique_launch.py  colors.py  game.py  menu.py  option.py  symbol.py
