[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable maze generator module"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
	"wheel>=0.40.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]
